--- a/employee/pom.xml
+++ b/employee/pom.xml
@@ -7,22 +7,57 @@
 	<description>Employee project</description>
 	<packaging>war</packaging>
 	<properties>
+		<!-- maven-compiler-plugin -->
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+	
+		<!-- Wildfly Bom Version-->
+		<version.jboss.bom>8.2.1.Final</version.jboss.bom>
+		
+		<!-- other plugin-->
 		<version.war.plugin>3.3.2</version.war.plugin>
 		<version.wildfly.maven.plugin>3.0.0.Final</version.wildfly.maven.plugin>
-		<version.jboss.bom>9.0.0.Beta2</version.jboss.bom>
 	</properties>
 	<dependencies>
+  		<!-- Import the JAX-RS API, we use provided scope as the API is included in JBoss WildFly -->
+     	<dependency>
+        	<groupId>org.jboss.resteasy</groupId>
+        	<artifactId>jaxrs-api</artifactId>
+        	<scope>provided</scope>
+      	</dependency>
+      	<!-- Import the JSF API, we use provided scope as the API is included in JBoss WildFly -->
 		<dependency>
+			<groupId>org.jboss.spec.javax.faces</groupId>
+			<artifactId>jboss-jsf-api_2.2_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
+      	<!-- Import the CDI API, we use provided scope as the API is included in JBoss WildFly -->
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+      	<!-- Import the EJB API, we use provided scope as the API is included in JBoss WildFly -->
+      	<dependency>
+          	<groupId>org.jboss.spec.javax.ejb</groupId>
+          	<artifactId>jboss-ejb-api_3.2_spec</artifactId>
+          	<scope>provided</scope>
+      	</dependency>
+      	<!-- Import the JPA API, we use provided scope as the API is included in JBoss WildFly -->
+        <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <scope>provided</scope>
         </dependency>   
+        <!-- JSR-303 (Bean Validation) Implementation -->
+        <!-- Provides portable constraints such as @Email -->
+        <!-- Hibernate Validator is shipped in JBoss WildFly -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
             <scope>provided</scope>
-        </dependency>
-	</dependencies>
+        </dependency>  	
+  	</dependencies>
 	<dependencyManagement>
   		<dependencies>
   			<dependency>
