--- a/appthings/pom.xml
+++ b/appthings/pom.xml
@@ -94,6 +94,9 @@
 		  		<plugin>
 		  			<artifactId>maven-war-plugin</artifactId>
 		  			<version>${version.war.plugin}</version>
+					<configuration>
+						<failOnMissingWebXml>false</failOnMissingWebXml>    
+					</configuration>
 		  		</plugin>
 			  	<plugin>
 			  		<groupId>org.wildfly.plugins</groupId>
